<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="appName">Condroid</string>
    <string name="appNameAbout">Condroid - o programu</string>
    <string name="mAbout">O programu</string>
    <string name="mRefresh">Obnovit</string>
    <string name="sSearchHint">Zadejte autora, název pořadu nebo ID</string>
    <string name="loading">Načítám...</string>
    <string name="downloading">Stahuji...</string>
    <string name="processing">Zpracovávám...</string>
    <string name="tAboutName">Condroid 3.1</string>
    <string name="tAboutCopyright">© 2011-2014\nJan Langer, Fan-Project</string>
    <string name="tAboutHttp">http://condroid.fan-project.com</string>
    <string name="tAboutMail">quinix@quinix.cz</string>
    <string name="noData">Datový soubor neobsahuje žádné záznamy.</string>
    <string name="downloadDialog">Databáze neobsahuje žádné záznamy. \n\nChcete je nyní stáhnout?</string>
    <string name="dPickLine">Vyberte linii</string>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>
    <string name="dPickConvention">Dostupné cony</string>
    <string name="noAnnotationsFound">Nebyly nalezeny žádné vyhovující záznamy.</string>
    <string name="dPickDate">Vyberte den</string>
    <string name="tLoadedInfo">Načtená data pro</string>
    <string name="lecture">Přednáška</string>
    <string name="discussion">Diskuze</string>
    <string name="projection">Projekce</string>
    <string name="document">Dokument</string>
    <string name="game">Turnaj</string>
    <string name="quiz">Soutěž</string>
    <string name="workshop">Workshop</string>
    <string name="theatre">Ceremoniál/Divadlo</string>
    <string name="music">Hudba</string>
    <string name="chooseFilter">Filtrovat podle</string>

    <string-array name="filterBy">
        <item>Data</item>
        <item>Linie</item>
        <item>Pouze oblíbené</item>
    </string-array>
    <string-array name="disableFilterBy">
        <item>Fulltext</item>
        <item>Data</item>
        <item>Linie</item>
        <item>Oblíbené</item>
        <item>Všechny filtry</item>
    </string-array>

    <string name="disableFilter">Vyberte filtry které chcete zrušit</string>

    <string-array name="annotationContext">
        <item>Sdílet</item>
        <item>Přidat/odebrat z oblíbených</item>
        <item>Nastavit upozornění</item>
    </string-array>

    <string name="about">- Verze: 3.1</string>
    <string name="versionNews">Novinky v této verzi</string>
    <string name="versionNewsText">- nový design, nové už. rozhraní\n- automatické aktualizace\n- proklik na IMDB u filmů\n- informace o akci\n- možnost přispět na vývoj přímo přes Google Play\n- opravy chyb</string>
    <string name="twitterFollow">Sledujte Condroid na Twitteru</string>
    <string name="licenced">Licensed under New BSD license.</string>
    <string name="mFavoriteOnly">Pouze oblíbené</string>
    <string name="remind">Nastavit připomenutí</string>

    <string-array name="remindBefore">
        <item>v čase začátku</item>
        <item>2 minuty</item>
        <item>5 minut</item>
        <item>10 minut</item>
        <item>15 minut</item>
        <item>20 minut</item>
        <item>30 minut</item>
    </string-array>

    <string name="today">Dnes</string>
    <string name="runningNow">Právě běží</string>
    <string name="tRunning">Aktuální</string>
    <string name="tAll">Vše</string>
    <string name="tTwitter">Twitter</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">30dp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

    <string name="tNoData">Nejsou k dispozici žádná data</string>
    <string name="noDatesAvailable">Nejsou k dispozici žádné časy začátků pořadů, nelze filtrovat podle data.</string>
    <string name="mReload">Načíst data</string>
    <string name="mSettings">Nastavení</string>
    <string name="pUpdateTitle">Zjišťování aktualizací dat</string>
    <string name="pAutoUpdate">Automatická kontrola</string>
    <string name="pAutoUpdatePeriod">Frekvence aktualizace</string>
    <string name="pLastUpdate">Poslední aktualizace</string>
    <string name="pReminderTitle">Upozornění začátku programu</string>
    <string name="pReminderFlash">Oznámení blikáním diody</string>
    <string name="pReminderTone">Zvuk upozornění</string>
    <string name="pReminderToneCheckbox">Zvukové upozornění</string>
    <string name="pReminderVibrate">Vibrovat</string>
    <string name="mReminder">Připomenutí</string>
    <string name="planedReminders">Plánované připomenutí (kliknutím odstraňte)</string>

    <string-array name="pAutoUpdatePeriods">
        <item>15 minut</item>
        <item>30 minut</item>
        <item>1 hodina</item>
        <item>2 hodiny</item>
        <item>3 hodiny</item>
        <item>6 hodin</item>
        <item>12 hodin</item>
    </string-array>
    <string-array name="pAutoUpdatePeriodsValues">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
    </string-array>
    <string-array name="reminderContext">
        <item>Zrušit připomenutí</item>
    </string-array>

    <string name="dUpdatesFoundTitle">Aktualizace programu</string>
    <string name="dUpdatesFoundMsg">Na serveru je k dispozici novější verze programu akce. \n\nChcete nyní provést aktualizaci? \nAktualizaci lze později stáhnout prostřednictvím menu.</string>
    <string name="dNotNow">Nyní ne</string>
    <string name="updateOrFullDialog">Chcete pouze aktualizovat data pro aktuálně načtenou akci nebo provést kompletní aktualizaci/načíst data jiné akce?</string>
    <string name="full">Kompletně</string>
    <string name="update">Pouze aktualizace</string>
    <string name="mFilter">Filtrovat</string>
    <string name="mSearch">Hledat</string>
    <string name="mShare">Sdílet</string>
    <string name="mFavorite">Oblíbené</string>
    <string name="annotation">Anotace</string>
    <string name="justRunning">Pořad právě běží</string>
    <string name="startsInXMinutes">Pořad začíná za </string>
    <string name="networkError">Nedaří se spojit se serverem. Jste připojení k internetu?</string>
    <string name="serverError">Vypadá to že server má nějaké potíže. Zkuste to prosím za chvilku.</string>
    <string name="noUpdates">Žádná data nejsou k dispozici.</string>

    <string name="drawer_anotherAction">Načíst jinou akci</string>
    <string name="drawer_reminder">Připomenutí</string>
    <string name="drawer_settings">Nastavení</string>
    <string name="drawer_about">O aplikaci</string>

    <string name="drawer_restaurant">Občerstvení a obchody</string>
    <string name="drawer_map">Mapa okolí</string>
    <string name="drawer_web">Web akce</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="alreadyRun">Tento pořad již skončil.</string>
    <string name="lessThanMinute">méně než minutu</string>
    <string name="lsettings">Nastavení</string>
    <string name="imdbNotInstalled">Nainstalujte si IMDB aplikaci pro lepší přístup k filmům a trailerům.</string>
    <string name="drawerClose">Drawer closed</string>
    <string name="drawerOpen">Drawer open</string>
    <string name="openingHours">Otevírací doba</string>
    <string name="open">Otevřeno</string>
    <string name="lClosed">ZAVŘENO</string>

</resources>
