<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

    <ScrollView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/scrollView1">
        
        <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">

            <LinearLayout android:id="@+id/linearLayout4" android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="center_horizontal" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_marginBottom="20dip" android:layout_marginTop="10dip">
                <TextView android:layout_width="wrap_content" android:id="@+id/textView1" android:layout_height="wrap_content" android:text="@string/tAboutName" android:textColor="@color/darkgray"></TextView>
    <TextView android:layout_width="wrap_content" android:id="@+id/textView2" android:layout_height="wrap_content" android:autoLink="web" android:text="@string/tAboutHttp" android:textColor="@color/white"></TextView>

            </LinearLayout>

            <LinearLayout android:id="@+id/LinearLayout01" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_marginBottom="20dip">
                <TextView android:id="@+id/TextView05" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:text="@string/versionNews" android:textColor="@color/darkgray" ></TextView>
                <TextView android:id="@+id/TextView02" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/versionNewsText" android:textColor="@color/darkgray" android:paddingLeft="10dp" android:paddingRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"></TextView>
            </LinearLayout>

            <LinearLayout android:id="@+id/LinearLayout03" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center_horizontal" android:layout_marginBottom="15dip" android:layout_width="fill_parent">

                <TextView android:id="@+id/TextView09" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:text="@string/twitterFollow" android:textColor="@color/darkgray"></TextView>
                <ImageView android:layout_height="wrap_content" android:src="@drawable/follow" android:layout_width="wrap_content" android:padding="5dip" android:id="@+id/iFollow"></ImageView>

                <TextView android:layout_width="wrap_content" android:id="@+id/textView3" android:layout_height="wrap_content" android:text="@string/tAboutCopyright" android:paddingTop="20dp" android:textColor="@color/darkgray" android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"></TextView>

                <TextView android:layout_width="wrap_content" android:id="@+id/textView4" android:layout_height="wrap_content" android:autoLink="email" android:text="@string/tAboutMail" android:textColor="@color/white"></TextView>

                <TextView android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/darkgray" android:text="@string/licenced" android:gravity="center"
                    android:layout_gravity="center_horizontal"></TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    
</LinearLayout>
