<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/mData_reload" android:title="@string/mReload" android:icon="@drawable/refresh" app:showAsAction="ifRoom"></item>
    <item android:id="@+id/mFilter" android:title="@string/mFilter" android:icon="@drawable/filter" app:showAsAction="ifRoom"></item>
    <item android:id="@+id/mSearch" android:title="@string/mSearch" android:icon="@drawable/search" app:showAsAction="ifRoom"></item>
    <!--item android:id="@+id/mReminderList" android:title="@string/mReminder" android:icon="@drawable/bell" android:visible="true" android:showAsAction="never"></item>


    <item android:id="@+id/mSettings" android:title="@string/mSettings" android:icon="@android:drawable/ic_menu_preferences" android:showAsAction="never"></item>
    <item android:title="@string/mAbout" android:id="@+id/mAbout" android:showAsAction="never"></item-->
</menu>
